fix:user schema
